--- a/index.html
+++ b/index.html
@@ -24,17 +24,31 @@ f=false,d=document,vwoCodeEl=document.querySelector('#vwoCode'),code={use_existi
 
 <style>
     .hero {
-    width: 100px;
-    height: 100px;
+    width: 400px;
+    height: 500px;
     background-color: aqua;
-}
+    }
+    div {
+        width: 200px;
+        height: 200px;
+        background-color: red;
+    }
+    .hello {
+        width: 50px;
+        height: 50px;
+        background-color: blue;
+    }
 </style>
 
 
 </head>
 <body>
 
-   <section id="23" class="hero"></section>
+   <section id="23" class="hero">
+    <div id="72">
+        <div id="74" class="hello"></div>
+    </div>
+   </section>
     
 </body>
 </html>
